third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/inline-parity/lambda_cast_err.exp

Diagnostics:
error: expected function type has argument of type `(u64, vector<u8>)` but `(u64, integer)` was provided
   ┌─ tests/checking-lang-v2.2/lambda/inline-parity/lambda_cast_err.move:26:52
   │
26 │         vector_fold(gas_schedule_blob, (0 as u64), |sum, addend| sum + (addend as u64))
   │                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
